<resources>
    <string name="app_name">rateApp</string>
    <string name="input_text">input your RMB</string>
    <string name="showout_text">this is your money</string>
    <string name="dollar_lable">dollar</string>
    <string name="euro_lable">euro</string>
    <string name="won_lable">won</string>
    <string name="btn45">save</string>
    <string name="fire">open list</string>
</resources>
